<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.Activity.Edit_Profile">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:paddingBottom="10dp"
        android:background="@color/white"
        android:clipToPadding="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:layout_gravity="center"
            android:orientation="vertical"
            >


            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_40sdp"
                app:cardCornerRadius="10dp"
                app:cardElevation="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_20sdp"
                tools:ignore="MissingConstraints">
                <EditText
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:id="@+id/name"
                    android:inputType="text"
                    android:hint="@string/fullname_edit_profile"
                    android:textSize="@dimen/_14ssp"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="@dimen/_10sdp"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:background="@drawable/background_edittext"
                    android:textAlignment="viewStart"
                    />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_40sdp"
                app:cardCornerRadius="10dp"
                app:cardElevation="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_20sdp"
                tools:ignore="MissingConstraints">
                <EditText
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:id="@+id/phone"
                    android:inputType="number"
                    android:hint="@string/phone_edit_profile"
                    android:textDirection="ltr"
                    android:maxLength="10"
                    android:textSize="@dimen/_14ssp"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawablePadding="@dimen/_10sdp"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:background="@drawable/background_edittext"
                    android:textAlignment="viewStart"
                    />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_40sdp"
                app:cardCornerRadius="10dp"
                app:cardElevation="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:visibility="gone"
                tools:ignore="MissingConstraints">

                <EditText
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:id="@+id/oldpassword"
                    android:inputType="textPassword"
                    android:hint="@string/oldpassword"
                    android:textSize="@dimen/_14ssp"
                    android:drawableStart="@drawable/ic_visibilityoff"
                    android:drawablePadding="@dimen/_10sdp"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:background="@drawable/background_edittext"
                    android:textAlignment="viewStart"


                    />
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editpassword"
                android:text="@string/actionbar_check_edit_profile_password"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_20sdp"
                android:textSize="@dimen/_13ssp"
                android:foreground="?android:attr/selectableItemBackground"
                />


            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_40sdp"
                app:cardCornerRadius="10dp"
                app:cardElevation="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:foreground="?android:attr/selectableItemBackground"
                tools:ignore="MissingConstraints">
                <Button
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:text="@string/edit"
                    android:id="@+id/btn_upd"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_13ssp"
                    android:layout_gravity="center"
                    android:background="@drawable/background_button_register"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="btn_upd"
                    tools:ignore="OnClick" />
            </androidx.cardview.widget.CardView>

        </LinearLayout >
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>