<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Ui.Activity.MainActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="start"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="محمد السر سليمان"
                android:id="@+id/name"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="@dimen/_5sdp"
                android:textColor="@color/blue"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/date"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="start"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:text="@string/lastlogin"
                    android:id="@+id/loginlast"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_9sdp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="start"
                    android:fontFamily="@font/elmessiri_medium"
                    android:id="@+id/datelast"
                    android:textColor="@color/black1"
                    android:textSize="@dimen/_9sdp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logout"
            android:src="@drawable/ic_logout"
            android:layout_gravity="end"
            android:padding="@dimen/_15sdp"
            android:foreground="?android:attr/selectableItemBackground"
            />

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:paddingBottom="10dp"
        android:background="@color/white"
        android:clipToPadding="false">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_60sdp"
        android:background="@color/white"
        android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@color/white"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_110sdp"
                android:layout_height="wrap_content"
                android:id="@+id/cardview_Added"
                android:background="@color/white"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="@dimen/_12sdp"
                app:cardElevation="@dimen/_4sdp"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardBackgroundColor="@color/white"
                android:foreground="?android:attr/selectableItemBackground"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/_16sdp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    >
                    <ImageView
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:src="@drawable/registering"
                        android:layout_gravity="center_horizontal"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/newregisteration_carview"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textSize="@dimen/_11ssp"
                        android:textColor="@color/black1"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_110sdp"
                android:layout_height="wrap_content"
                android:id="@+id/cardview_show"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="@dimen/_12sdp"
                app:cardElevation="@dimen/_4sdp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_8sdp"
                android:foreground="?android:attr/selectableItemBackground"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/_16sdp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    >

                    <ImageView
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:src="@drawable/show"
                        android:layout_gravity="center_horizontal"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/show_cardview"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_gravity="center"
                        android:textSize="@dimen/_11ssp"
                        android:textColor="@color/black1"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_110sdp"
                android:layout_height="wrap_content"
                android:id="@+id/cardview_report"
                android:layout_margin="@dimen/_12sdp"
                android:background="@color/white"
                app:cardElevation="@dimen/_4sdp"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardBackgroundColor="@color/white"
                android:foreground="?android:attr/selectableItemBackground"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/_16sdp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    >
                    <ImageView
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:src="@drawable/report"
                        android:layout_gravity="center_horizontal"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/report_cardview"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textSize="@dimen/_11ssp"
                        android:textColor="@color/black1"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_110sdp"
                android:layout_height="wrap_content"
                android:id="@+id/cardview_setting"
                android:background="@color/white"
                android:layout_margin="@dimen/_12sdp"
                app:cardElevation="@dimen/_4sdp"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardBackgroundColor="@color/white"
                android:foreground="?android:attr/selectableItemBackground"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/_16sdp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    >
                    <ImageView
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:src="@drawable/setting"
                        android:layout_gravity="center_horizontal"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_cardview"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textSize="@dimen/_11ssp"
                        android:textColor="@color/black1"
                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>